--- a/src/components/Character/styles.module.scss
+++ b/src/components/Character/styles.module.scss
@@ -1,17 +1,15 @@
 .wrapper {
-  padding: 0 30px;
-  height: 100%;
+  height: 20px;
   max-height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
-  flex: 1;
+
+  //   flex: 1;
   cursor: pointer;
 
-  &:nth-child(even) {
-    background-color: #f3f3f6;
-  }
   &:hover {
-    opacity: 0.4;
+    // opacity: 0.4;
+    background-color: #14060620;
   }
 }
