--- a/src/components/CharactersList/styles.module.scss
+++ b/src/components/CharactersList/styles.module.scss
@@ -1,8 +1,13 @@
 .wrapper {
   padding: 0;
+  margin: 0;
   width: 100%;
-  height: 100%;
   list-style: none;
   display: flex;
   flex-direction: column;
+  gap: 10px;
+  overflow-y: auto;
+  border-radius: 5px;
+  border: 1px solid #d3d3d4;
+  background-color: #ffffff50;
 }
