--- a/src/app.styles.module.scss
+++ b/src/app.styles.module.scss
@@ -1,37 +1,6 @@
 .wrapper {
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
   display: flex;
-  @media (max-width: 1023px) {
-    flex-direction: column;
-  }
-
-  .charList {
-    margin: 30px 0 0 30px;
-    position: absolute;
-    padding: 10px;
-    height: 60vh;
-    max-height: 420px;
-    display: flex;
-    // justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
-    z-index: 2;
-    backdrop-filter: blur(3px);
-    border: 1px solid #d3d3d4;
-    border-radius: 8px;
-    transition: 1s ease-in;
-    overflow: hidden;
-    @media (max-width: 1023px) {
-      height: 50px;
-    }
-  }
-
-  .reactFlow {
-    width: 100%;
-    height: 100%;
-    @media (max-width: 1023px) {
-    }
-  }
 }
