--- a/src/components/Buttons/styles.module.scss
+++ b/src/components/Buttons/styles.module.scss
@@ -1,4 +1,10 @@
 .wrapper {
+  width: 100%;
+  padding: 10px 10px 10px 10px;
   display: flex;
   gap: 50px;
+  @media (max-width: 601px) {
+    gap: 5px;
+    justify-content: space-between;
+  }
 }
