--- a/src/components/ReactFlowBlock/styles.module.scss
+++ b/src/components/ReactFlowBlock/styles.module.scss
@@ -1,5 +1,6 @@
-.node {
-  padding: 0;
-  width: 50px;
-  height: 50px;
+.reactFlow {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
 }
