--- a/src/components/Loading/styles.module.scss
+++ b/src/components/Loading/styles.module.scss
@@ -1,7 +1,12 @@
 .wrapper {
   width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
+
+  .icon {
+    width: 100px;
+    height: 100px;
+  }
 }
